# pointcloud2_aggregator

./: CMakeLists.txt  README.md  package.xml
config/: aggregator.yaml  monitor.yaml
include/: aggregator.hpp  combiner.hpp  ringbuffer.hpp  transformer.hpp
launch/: aggregator.launch.py  aggregator_auto.launch.py  monitor.launch.py
scripts/: rosbag2_to_LAS.py
src/: aggregator.cpp  aggregator_node.cpp  combiner_node.cpp  cropbox_node.cpp  monitor.cpp  monitor_node.cpp  transform_node.cpp
